Enhance Aidbox service with FHIR Batch support for efficient access testing; update environment example with new client credentials and improve access route documentation.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,16 @@
 # Aidbox Configuration
+# Use the BASE URL only (without /ui/console or other paths)
+# Example: https://your-instance.aidbox.app (NOT https://your-instance.aidbox.app/ui/console)
 AIDBOX_URL=https://your-aidbox-instance.aidbox.app
-AIDBOX_CLIENT_ID=your-admin-client-id
-AIDBOX_CLIENT_SECRET=your-admin-client-secret
+
+# Client credentials for OAuth (client_credentials grant type)
+# Create a Client in Aidbox with:
+#   PUT /Client/api-client
+#   secret: your-secret
+#   grant_types: [client_credentials]
+# And an AccessPolicy with engine: allow linked to this Client
+AIDBOX_CLIENT_ID=api-client
+AIDBOX_CLIENT_SECRET=verysecret
 
 # Server Configuration
 PORT=3001
