Update .gitignore to include backend and frontend node_modules; enhance backend .env.example with new user authentication client credentials; refactor access testing routes to use parallel requests instead of batch requests; improve Aidbox service error handling and logging; update frontend components for better tooltip positioning and access policy indication.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,5 +12,8 @@ AIDBOX_URL=https://your-aidbox-instance.aidbox.app
 AIDBOX_CLIENT_ID=api-client
 AIDBOX_CLIENT_SECRET=verysecret
 
+AIDBOX_USER_AUTH_CLIENT_ID=user-auth-client
+AIDBOX_USER_AUTH_CLIENT_SECRET=<the-secret>
+
 # Server Configuration
 PORT=3001
